--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-@import "./assets/sass/main.scss";
+@import "./sass/main.scss";
 
 body {
     @extend %base-font;
